# sample_python_multiprocessing

./: .gitmodules  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  run.py  search.html  searchindex.js  src.html
docs/: Makefile
docs/source/: conf.py  index.rst  src.rst
src/: __init__.py  child.py  child.pyi  dto.py  dto.pyi  parent.py  parent.pyi
tests/: test_parent.py
