[tool.poetry]
name = "sample-python-multiprocessing"
version = "0.0.0"
description = ""
authors = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
tqdm = "^4.64.1"
types-tqdm = "^4.64.7.11"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^22.12.0"
python-lsp-server = "^1.7.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
sphinx = "^6.1.3"
sphinx-rtd-theme = "1.2.0rc2"
sphinx-pyproject-poetry = {git = "https://github.com/tetutaro/sphinx-pyproject-poetry.git"}
pytest-mypy = "^0.10.3"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "{base}"
style = "pep440"

[tool.flake8]
max-line-length = 79
ignore = "E203"
max-complexity = 15

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true
exclude = ["__pycache__", "^__init__\\.py$"]

[tool.pytest.ini_options]
addopts = "-v --cov --mypy"

[tool.sphinx-pyproject]
copyright = "2023, Tetsutaro Maruyama"
extensions = ["sphinx.ext.autodoc", "sphinx.ext.napoleon", "sphinx_rtd_theme"]
templates_path = ["_templates"]
exclude_patterns = []
language = "ja"
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]
